# game_race_simulator

./: CMakeLists.txt
src/: main.cpp
vehicles/: Air_vehicle.cpp  Air_vehicle.h  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  Fast_moving_camel.cpp  Fast_moving_camel.h  Ground_based_vehicle.cpp  Ground_based_vehicle.h
